fix spacing and class problem

--- a/css/main.css
+++ b/css/main.css
@@ -132,10 +132,10 @@ p {
   text-align: center;
 }
 
-.box1 {
+.hours-box1 {
   float: left;
 }
 
-.box2 {
+.hours-box2 {
   float: left;
 }
